@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20160908115429) do
+ActiveRecord::Schema.define(version: 20161123123228) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -88,8 +88,8 @@ ActiveRecord::Schema.define(version: 20160908115429) do
   create_table "servers", force: :cascade do |t|
     t.string   "name"
     t.string   "ip"
-    t.datetime "created_at",                      null: false
-    t.datetime "updated_at",                      null: false
+    t.datetime "created_at",                       null: false
+    t.datetime "updated_at",                       null: false
     t.text     "rsa_key_public"
     t.text     "rsa_key_private"
     t.boolean  "connected",       default: false
@@ -101,6 +101,7 @@ ActiveRecord::Schema.define(version: 20160908115429) do
     t.integer  "total_ram"
     t.integer  "total_disk"
     t.integer  "total_cpu"
+    t.string   "username",        default: "root"
   end
 
   create_table "services", force: :cascade do |t|
