@@ -1,5 +1,8 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
+Unreleased
+* Allow execution user to be set for a server, defaults to root Fixes: #94 (jvanbaarsen)
+
 V 0.2.0 * 2016-09-19
 * Mark all existing services as linked (jvanbaarsen)
 * Store the amount of resources a server has (jvanbaarsen)
